# bluewave_academy

./: .env.example  .gitignore  .replit  ADMIN_DELIVERY_SUMMARY.md  ADMIN_QUICK_SETUP.md  ADMIN_SYSTEM_DOCS.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  Procfile  QUICK_START_GUIDE.md  RESPONSIVE_DESIGN_REPORT.md  SYSTEM_DOCUMENTATION.md  db.sqlite3  manage.py  nixpacks.toml  populate_blog.py  pyproject.toml  railway.toml
attached_assets/: Pasted-Act-as-an-expert-Full-Stack-Software-Architect-and-AI-I_1778416019926.txt
siteapp/: admin.py  admin_views.py  ai_tutor.py  api_views.py  apps.py  classroom_access.py  consumers.py  examinator_service.py  examinator_views.py  forms.py  groq_service.py  models.py  notifications.py  pdf_generator.py  routing.py  signals.py  tasks.py  tutorial_views.py  urls.py  views.py  zuri_views.py
siteapp/migrations/: 0001_initial.py  0002_classroom_assignment_specialpaper_enrollment_and_more.py  0003_blogpost_author_category.py  0004_add_tutorial_videoprogress.py
siteproject/: __init__.py  asgi.py  celery.py  settings.py  storage_backends.py  urls.py  wsgi.py
static/css/: about-redesign.css  about.css  admin-dashboard.css  admin-panel.css  auth-Chiby.css  blog-page.css  blog-redesign.css  blog.css  contact-page.css  contact-redesign.css  contact.css  dashboard.css  downloads-page.css  downloads-redesign.css  downloads.css  exam-page.css  examinator.css  home.css  home1.css  login-redesign.css  login1.css  portal-page.css  portal.css  registration.css  student-portal.css  style1.css  styles.css  (+2 more)
(+92 files in other folders)
