[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django==5.2.1",
    "google-genai>=2.0.1",
    "google-generativeai>=0.8.6",
    "groq>=1.2.0",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "reportlab>=4.5.0",
    "requests>=2.33.1",
    "supabase>=2.30.0",
]
