[project]
name = "bluewaveacademy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django==5.2.1",
    "channels>=4.1.0",
    "channels-redis>=4.2.0",
    "google-genai>=2.0.1",
    "google-generativeai>=0.8.6",
    "groq>=1.2.0",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "pypdf>=6.0.0",
    "reportlab>=4.5.0",
    "requests>=2.33.1",
    "supabase>=2.30.0",
    "django-cache-url>=3.4.0",
    # Production: database
    "psycopg[binary]>=3.1.18",
    "dj-database-url>=2.2.0",
    # Production: static files
    "whitenoise[brotli]>=6.7.0",
    # Production: Supabase S3-compatible media storage
    "django-storages[s3]>=1.14.3",
    "boto3>=1.34.0",
    # Production: Redis cache backend
    "django-redis>=5.4.0",
    # Production: process management
    "uvicorn[standard]>=0.30.0",
]
